fix(help-center): avoid chat button overlap in wizard footer (#3187)
* fix(help-center): avoid chat button overlap in wizard footer

* fix(help-center): move chat to bottom

--- a/src/pages/settings/helpCenter/components/HelpCenterCreationWizard/HelpCenterCreationWizard.less
+++ b/src/pages/settings/helpCenter/components/HelpCenterCreationWizard/HelpCenterCreationWizard.less
@@ -13,3 +13,12 @@
         flex: 1;
     }
 }
+
+:global {
+    // When .help-center-wizard is present, we need to adjust the position of the chat button
+    body:has(.help-center-wizard) {
+        #chat-button {
+            bottom: 40px !important; // avoid overlapping with the footer button when screen is smallÏ
+        }
+    }
+}
